--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-svg": "^15.14.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
