--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@supabase/supabase-js": "^2.47.2",
     "expo": "~54.0.20",
     "expo-blur": "^15.0.7",
     "expo-clipboard": "^8.0.7",
@@ -49,11 +50,14 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "react-native-purchases": "^8.4.0",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "dotenv": "^16.4.5",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
