--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo-google-fonts/merriweather-sans": "^0.4.2",
     "@expo-google-fonts/patrick-hand": "^0.4.1",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -24,6 +25,7 @@
     "expo-blur": "^15.0.7",
     "expo-clipboard": "^8.0.7",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
@@ -43,6 +45,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-purchases": "^8.4.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -50,8 +53,6 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
-    "react-native-purchases": "^8.4.0",
-    "@react-native-async-storage/async-storage": "^2.1.0",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.4.18"
   },
