--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@sentry/react-native": "^7.6.0",
     "@supabase/supabase-js": "^2.47.2",
     "expo": "~54.0.20",
     "expo-blur": "^15.0.7",
